--- a/biografia.htm
+++ b/biografia.htm
@@ -44,7 +44,10 @@
       tiempo que te sabes la receta de memoria.<br>
       <br>
       <main class="contenido">
-        <p class="center big rojo">Había nacido... <strong>1ª Komunión</strong>:</p>
+        <p class="center big rojo"></p>
+        <h3>Había nacido... </h3>
+        <h1><span style="color: red;"><b><strong>1ª Komunión</strong></b></span></h1>
+        <p> </p>
         <section class="integrantes">
           <article class="integrante"> <img src="imagenes/Bici.jpg" alt="Antonio Bici Díaz">
             <p class="nombre">Antonio “Bicicleta” Díaz</p>
