--- a/biografia.htm
+++ b/biografia.htm
@@ -45,7 +45,9 @@
       <br>
       <main class="contenido">
         <p class="center big rojo"></p>
-        <h3>Había nacido... </h3>
+        <h3>Había nacido...</h3>
+        <p><br>
+        </p>
         <h1><span style="color: red;"><b><strong>1ª Komunión</strong></b></span></h1>
         <p> </p>
         <section class="integrantes">
@@ -83,28 +85,26 @@
         resucitar con motivo del 20º aniversario de la formación del grupo.<br>
         &nbsp;&nbsp;&nbsp; Para conmemorar dicho hito, reaparecimos&nbsp; en el
         XIII Bestialc de L'Alcora, el 30 de agosto de 2008. <br>
-        &nbsp;&nbsp;&nbsp; Había llovido desde la última vez que Con unos pocos
-        ensayos, y en plan kamikaze, pensamos que para la ocasión debíamos hacer
-        algo que quedase ya plasmado para la posteridad, "Resurrekción" fue el
-        título de esa grabación en directo. Formato DVD por si alguien tiene
-        reproductor.<br>
-        &nbsp;&nbsp;&nbsp; Gracias a la colaboración de Lalo Cotanda: grabación
-        de Video y Montaje y Juan Carlos Tomás Castillo "Juanki": grabación de
-        audio y sobre todo al público que una vez más vino a vernos,
+        &nbsp;&nbsp;&nbsp; Había llovido mucho desde la última vez que habíamos
+        tocado, así que, con unos pocos ensayos y en plan kamikaze, pensamos que
+        para la ocasión debíamos hacer algo que quedase ya plasmado para la
+        posteridad, "Resurrekción" fue el título de esa grabación en directo.
+        Formato DVD por si alguien tiene reproductor.<br>
+        &nbsp;&nbsp;&nbsp; Gracias a la colaboración de Lalo Cotanda (grabación
+        de Video y Montaje) y Juan Carlos Tomás Castillo "Juanki" (Grabación de
+        audio). Y sobre todo al público, que una vez más vino a vernos,
         brindándonos la ocasión de vivir una noche inolvidable con su presencia.<br>
         <br>
         &nbsp;&nbsp;&nbsp; Y de esta forma,&nbsp; editamos un DVD con las
         canciones que perpetramos en ese concierto, entrevistas y algunas
         fotos... <br>
-        &nbsp;&nbsp;&nbsp; .......esperemos que nuestros nietos si los hubiere,
-        puedan hacer puntería con las copias en uno de los cuatro&nbsp;
-        contenedores ...........<br>
-        <br>
-        <br>
-        &nbsp;&nbsp;&nbsp; Ya puestos en harina, en 2011 , sacamos un CD con los
-        temas que habían quedado en el tintero por grabar, y algunas
-        colaboraciones en recopilatorios y tributos, como el tema de J. Morcillo
-        "Quería enl Mundo Cambiar"<br>
+        ...esperemos que nuestros nietos -si los hubiere-, puedan hacer puntería
+        con las copias en uno de los cuatro&nbsp; contenedores ... &amp;#128513;<br>
+        <p>&nbsp; </p>
+        <p>Ya puestos en harina, en 2011, sacamos un CD con los temas que habían
+          quedado en el tintero por grabar, y también hicimos algunas
+          colaboraciones en recopilatorios y tributos, como por ejemplo, el tema
+          de J. Morcillo "Quería el Mundo Cambiar"</p>
         <br>
         &nbsp;&nbsp;&nbsp; Hicimos unos cuantos bolos por diferentes locales y
         participamos en varios festivales, hasta que en 2020, por motivos de
@@ -117,11 +117,11 @@
         sonido, Antonio "Bici", nos dejó prematuramente. Todavía hoy en día es
         difícil de imaginar que no está entre nosotros. <br>
         <br>
-        &nbsp;&nbsp;&nbsp; Ese mismo año, en el Festival Ultrasons, decidimos
-        hacer un último concierto como homenaje a nuestro compañero y amigo,
-        teniendo nuevamente a Jesús a la voz y a Ferrán a la batería, con Carlos
-        Medina a la guitarra y los cameos de Toni "X-Fanekaes" y J.L. Lorente
-        "El Xino", cantando un par de temas.<br>
+        &nbsp;&nbsp;&nbsp; Ese mismo año, en el 13º Festival Ultrasons,
+        decidimos hacer un último concierto como homenaje a nuestro compañero y
+        amigo "Bici", teniendo nuevamente a Jesús a la voz y a Ferrán a la
+        batería,&nbsp; con Carlos Medina a la guitarra y los cameos de Toni
+        "X-Fanekaes" y J.L. Lorente "El Xino", cantando un par de temas.<br>
         <br>
         &nbsp;&nbsp;&nbsp; Y .......a día de hoy cada uno sigue con la vida que
         tiene. Sin más. <br>
