--- a/biografia.htm
+++ b/biografia.htm
@@ -99,7 +99,10 @@
         canciones que perpetramos en ese concierto, entrevistas y algunas
         fotos... <br>
         ...esperemos que nuestros nietos -si los hubiere-, puedan hacer puntería
-        con las copias en uno de los cuatro&nbsp; contenedores ... &amp;#128513;<br>
+        con las copias en uno de los cuatro&nbsp; contenedores ...&nbsp;<span id="line10"><span>
+            😁
+          </span></span><span id="line11"><span>
+          </span></span><span id="line12"><span></span></span>
         <p>&nbsp; </p>
         <p>Ya puestos en harina, en 2011, sacamos un CD con los temas que habían
           quedado en el tintero por grabar, y también hicimos algunas
