--- a/biografia.htm
+++ b/biografia.htm
@@ -116,7 +116,7 @@
         Teniendo un último concierto pendiente, se puso a la voz Jesús&nbsp; "El
         Madri" Gallardo, y a la batería su hijo Ferrán Gallardo.<br>
         <br>
-        &nbsp;&nbsp;&nbsp; Poco después, en 2022 la voz y el alma de nuestro
+        &nbsp;&nbsp;&nbsp; Poco después, en 2022, la voz y el alma de nuestro
         sonido, Antonio "Bici", nos dejó prematuramente. Todavía hoy en día es
         difícil de imaginar que no está entre nosotros. <br>
         <br>
@@ -126,7 +126,7 @@
         batería,&nbsp; con Carlos Medina a la guitarra y los cameos de Toni
         "X-Fanekaes" y J.L. Lorente "El Xino", cantando un par de temas.<br>
         <br>
-        &nbsp;&nbsp;&nbsp; Y .......a día de hoy cada uno sigue con la vida que
+        &nbsp;&nbsp;&nbsp; Y ...a día de hoy cada uno sigue con la vida que
         tiene. Sin más. <br>
         &nbsp;&nbsp;&nbsp; Queremos dar las gracias a todos aquellos que han
         querido siempre que volvamos desde Alcora hasta Méjico. Las
