--- a/biografia.htm
+++ b/biografia.htm
@@ -20,10 +20,12 @@
       </ul>
     </nav>
     <br>
-    <main class="contenido">Corría el año 1988 e internet era prácticamente un
-      pensamiento futurista. Me refiero exactamente a que, menos el fútbol de 2ª
-      regional y las veladas pugilísticas de Estudio 17 (no te digo na´) todo lo
-      demás en esa época era bastante aburrido en domingo.<br>
+    <main class="contenido"><img src="imagenes/grupo1a.jpg" alt=""><br>
+      <br>
+      Corría el año 1988 e internet era prácticamente un pensamiento futurista.
+      Me refiero exactamente a que, menos el fútbol de 2ª regional y las veladas
+      pugilísticas de Estudio 17 (no te digo na´) todo lo demás en esa época era
+      bastante aburrido en domingo.<br>
       <br>
       &nbsp;&nbsp;&nbsp; Menos mal que por encima de todo se encontraba lo que
       realmente había importado hasta la fecha y que fuese la hora que fuese, te
@@ -100,9 +102,7 @@
         fotos... <br>
         ...esperemos que nuestros nietos -si los hubiere-, puedan hacer puntería
         con las copias en uno de los cuatro&nbsp; contenedores ...&nbsp;<span id="line10"><span>
-            😁
-          </span></span><span id="line11"><span>
-          </span></span><span id="line12"><span></span></span>
+            😁 </span></span><span id="line11"><span> </span></span><span id="line12"><span></span></span>
         <p>&nbsp; </p>
         <p>Ya puestos en harina, en 2011, sacamos un CD con los temas que habían
           quedado en el tintero por grabar, y también hicimos algunas
