--- a/biografia.htm
+++ b/biografia.htm
@@ -54,7 +54,7 @@
         <p> </p>
         <section class="integrantes">
           <article class="integrante"> <img src="imagenes/Bici.jpg" alt="Antonio Bici Díaz">
-            <p class="nombre">Antonio “Bicicleta” Díaz</p>
+            <p class="nombre">Antonio “Bici” Díaz</p>
             <p><span style="color: #cc33cc;">Voz de voces</span></p>
           </article>
           <article class="integrante"> <img src="imagenes/PATRI.jpg" alt="Patricio Tomás">
