--- a/biografia.htm
+++ b/biografia.htm
@@ -53,7 +53,8 @@
         <h1><span style="color: red;"><b><strong>1ª Komunión</strong></b></span></h1>
         <p> </p>
         <section class="integrantes">
-          <article class="integrante"> <img src="imagenes/Bici.jpg" alt="Antonio Bici Díaz">
+          <article class="integrante"> <img src="imagenes/Bici.jpg" alt="Antonio Bici Díaz"
+              style="width: 180px; height: 275px;">
             <p class="nombre">Antonio “Bici” Díaz</p>
             <p><span style="color: #cc33cc;">Voz de voces</span></p>
           </article>
@@ -78,10 +79,8 @@
         &nbsp;&nbsp;&nbsp; Por cierto, prolíficos y fructuosos años que “dieron
         a luz” todos aquellos conciertos (unos 84 más o menos), grabaciones y
         sesiones de guasa inolvidables tanto para sus miembros como para sus
-        seguidores.<a href="imagenes/foto%20oficial%20[1024x768].jpg" target="_blank"><img
-
-            src="imagenes/foto%20oficial%20[320x200].gif" alt="Foto oficial" height="240"
-
+        seguidores.<a href="imagenes/foto%20oficial%20[1024x768].jpg" target="_blank"><img
+            src="imagenes/foto%20oficial%20[320x200].gif" alt="Foto oficial" height="240"
             width="320"></a>
         <p class="center"><br>
         </p>
