--- a/biografia.htm
+++ b/biografia.htm
@@ -53,21 +53,28 @@
         <h1><span style="color: red;"><b><strong>1ª Komunión</strong></b></span></h1>
         <p> </p>
         <section class="integrantes">
-          <article class="integrante"> <img src="imagenes/Bici.jpg" alt="Antonio Bici Díaz"
+          <article class="integrante"> <img src="imagenes/Bici.jpg" alt="Antonio Bici Díaz"
+
               style="width: 180px; height: 275px;">
             <p class="nombre">Antonio “Bici” Díaz</p>
             <p><span style="color: #cc33cc;">Voz de voces</span></p>
           </article>
-          <article class="integrante"> <img src="imagenes/PATRI.jpg" alt="Patricio Tomás">
+          <article class="integrante"> <img src="imagenes/PATRI.jpg" alt="Patricio Tomás"
+
+              style="width: 180px; height: 275px;">
             <p class="nombre">Patricio Tomás</p>
             <p><span style="color: #cc33cc;">Superior del Monasterio de los
                 guitarristas descalzos</span></p>
           </article>
-          <article class="integrante"> <img src="imagenes/Luis.jpg" alt="Luis Solaz">
+          <article class="integrante"> <img src="imagenes/Luis.jpg" alt="Luis Solaz"
+
+              style="width: 180px; height: 275px;">
             <p class="nombre">Luis Solaz</p>
             <p><span style="color: #cc33cc;">Supuesto bajista y apoyo logístico</span></p>
           </article>
-          <article class="integrante"> <img src="imagenes/MADRI.jpg" alt="Jesús El Madri Gallardo">
+          <article class="integrante"> <img src="imagenes/MADRI.jpg"
+
+              alt="Jesús El Madri Gallardo"  style="width: 180px; height: 275px;">
             <p class="nombre">Jesús “El Madri” Gallardo</p>
             <p><span style="color: #cc33cc;">Aburrido compulsivo baterista</span></p>
           </article>
@@ -79,8 +86,10 @@
         &nbsp;&nbsp;&nbsp; Por cierto, prolíficos y fructuosos años que “dieron
         a luz” todos aquellos conciertos (unos 84 más o menos), grabaciones y
         sesiones de guasa inolvidables tanto para sus miembros como para sus
-        seguidores.<a href="imagenes/foto%20oficial%20[1024x768].jpg" target="_blank"><img
-            src="imagenes/foto%20oficial%20[320x200].gif" alt="Foto oficial" height="240"
+        seguidores.<a href="imagenes/foto%20oficial%20[1024x768].jpg" target="_blank"><img
+
+            src="imagenes/foto%20oficial%20[320x200].gif" alt="Foto oficial" height="240"
+
             width="320"></a>
         <p class="center"><br>
         </p>
