--- a/biografia.htm
+++ b/biografia.htm
@@ -6,8 +6,9 @@
     <title>Biografía – 1ª KOMUNION</title>
     <link rel="stylesheet" href="estilos-int.css">
   </head>
-  <body><a href="index.htm" class="logo"><img src="imagenes/texto%20logo1.gif" alt="1ª KOMUNION">
-    </a>
+  <body><a href="index.htm" class="logo"><img src="imagenes/texto%20logo1.gif"
+
+        alt="1ª KOMUNION"> </a>
     <nav class="nav-principal">
       <ul>
         <li><a href="index.htm">Inicio</a></li>
@@ -50,31 +51,22 @@
         <h3>Había nacido...</h3>
         <p><br>
         </p>
-        <h1><span style="color: red;"><b><strong>1ª Komunión</strong></b></span></h1>
+        <h1><span style="color: red;"><b><strong>1ª&nbsp;Komunión</strong></b></span></h1>
         <p> </p>
         <section class="integrantes">
-          <article class="integrante"> <img src="imagenes/Bici.jpg" alt="Antonio Bici Díaz"
-
-              style="width: 180px; height: 275px;">
-            <p class="nombre">Antonio “Bici” Díaz</p>
+          <article class="integrante"> <img src="imagenes/Bici.jpg" alt="Antonio bicicleta Diaz">
+            <p class="nombre">Antonio “Bicicleta" Díaz</p>
             <p><span style="color: #cc33cc;">Voz de voces</span></p>
           </article>
-          <article class="integrante"> <img src="imagenes/PATRI.jpg" alt="Patricio Tomás"
-
-              style="width: 180px; height: 275px;">
+          <article class="integrante"> <img src="imagenes/PATRI.jpg" alt="Patricio Tomás">
             <p class="nombre">Patricio Tomás</p>
-            <p><span style="color: #cc33cc;">Superior del Monasterio de los
-                guitarristas descalzos</span></p>
+            <p><span style="color: #cc33cc;">Superior del Monasterio de los Guitarristas descalzos</span></p>
           </article>
-          <article class="integrante"> <img src="imagenes/Luis.jpg" alt="Luis Solaz"
-
-              style="width: 180px; height: 275px;">
+          <article class="integrante"> <img src="imagenes/Luis.jpg" alt="Luis Solaz">
             <p class="nombre">Luis Solaz</p>
             <p><span style="color: #cc33cc;">Supuesto bajista y apoyo logístico</span></p>
           </article>
-          <article class="integrante"> <img src="imagenes/MADRI.jpg"
-
-              alt="Jesús El Madri Gallardo"  style="width: 180px; height: 275px;">
+          <article class="integrante"> <img src="imagenes/MADRI.jpg" alt="Jesús El Madri Gallardo">
             <p class="nombre">Jesús “El Madri” Gallardo</p>
             <p><span style="color: #cc33cc;">Aburrido compulsivo baterista</span></p>
           </article>
@@ -93,7 +85,7 @@
             width="320"></a>
         <p class="center"><br>
         </p>
-        Peeeerooooo...... pasaron los años, y tras 16 años sin tocar, decidimos
+        Peeeerooooo... pasaron los años, y tras 16 años sin tocar, decidimos
         resucitar con motivo del 20º aniversario de la formación del grupo.<br>
         &nbsp;&nbsp;&nbsp; Para conmemorar dicho hito, reaparecimos&nbsp; en el
         XIII Bestialc de L'Alcora, el 30 de agosto de 2008. <br>
