--- a/biografia.htm
+++ b/biografia.htm
@@ -6,9 +6,8 @@
     <title>Biografía – 1ª KOMUNION</title>
     <link rel="stylesheet" href="estilos-int.css">
   </head>
-  <body><a href="index.htm" class="logo"><img src="imagenes/texto%20logo1.gif"
-
-        alt="1ª KOMUNION"> </a>
+  <body><a href="index.htm" class="logo"><img src="imagenes/texto%20logo1.gif" alt="1ª KOMUNION">
+    </a>
     <nav class="nav-principal">
       <ul>
         <li><a href="index.htm">Inicio</a></li>
@@ -60,7 +59,8 @@
           </article>
           <article class="integrante"> <img src="imagenes/PATRI.jpg" alt="Patricio Tomás">
             <p class="nombre">Patricio Tomás</p>
-            <p><span style="color: #cc33cc;">Superior del Monasterio de los Guitarristas descalzos</span></p>
+            <p><span style="color: #cc33cc;">Superior del Monasterio de los
+                Guitarristas descalzos</span></p>
           </article>
           <article class="integrante"> <img src="imagenes/Luis.jpg" alt="Luis Solaz">
             <p class="nombre">Luis Solaz</p>
@@ -139,7 +139,7 @@
               Siempre y Para Siempre</span></b><span lang="ES-TRAD">:</span></font>
         <br>
         <br>
-        <img src="imagenes/homenajebici.jpg" style="width: 315px; height: 232px;">
+        <img src="imagenes/homenajebici.jpg" style="width: 315px; height: 315px;">
       </main>
       <a href="imagenes/foto%20oficial%20[1024x768].jpg" target="_blank"> </a></main>
   </body>
