--- a/biografia.htm
+++ b/biografia.htm
@@ -6,8 +6,9 @@
     <title>Biografía – 1ª KOMUNION</title>
     <link rel="stylesheet" href="estilos-int.css">
   </head>
-  <body><a href="index.htm" class="logo"><img src="imagenes/texto%20logo1.gif" alt="1ª KOMUNION">
-    </a>
+  <body><a href="index.htm" class="logo"><img src="imagenes/texto%20logo1.gif"
+
+        alt="1ª KOMUNION"> </a>
     <nav class="nav-principal">
       <ul>
         <li><a href="index.htm">Inicio</a></li>
@@ -139,7 +140,7 @@
               Siempre y Para Siempre</span></b><span lang="ES-TRAD">:</span></font>
         <br>
         <br>
-        <img src="imagenes/homenajebici.jpg" style="width: 315px; height: 315px;">
+        <img src="imagenes/homenajebici.jpg" style="width: 315px;">
       </main>
       <a href="imagenes/foto%20oficial%20[1024x768].jpg" target="_blank"> </a></main>
   </body>
