--- a/videos.htm
+++ b/videos.htm
@@ -43,9 +43,9 @@
   </style>
   </head>
   <body>
-    <header class="cabecera"> <a href="index.htm" class="logo"> </a>r&gt;<br>
-      <a href="index.htm" class="logo"><img src="imagenes/texto%20logo1.gif" alt="1ª KOMUNION">
-      </a> </header>
+    <header class="cabecera"> <a href="index.htm" class="logo"> <img src="imagenes/texto%20logo1.gif"
+          alt="1ª KOMUNION"> </a> </header>
+
     <nav class="nav-principal">
       <ul>
         <li><a href="index.htm">Inicio</a></li>
@@ -107,7 +107,7 @@
           <iframe src="https://www.youtube.com/embed/https://youtu.be/_3S-OQ9hf8w"
             allowfullscreen=""></iframe> <a class="link-youtube" href="https://youtu.be/_3S-OQ9hf8w"
             target="_blank" rel="noopener">Ver en YouTube →</a></div>
-        <div class="video-single"><a class="link-youtube" href="https://youtu.be/https://youtu.be/_3S-OQ9hf8w"
+        <div class="video-single"><a class="link-youtube" href="https://youtu.be/_3S-OQ9hf8w"
             target="_blank" rel="noopener"><br>
           </a><br>
           <hr style="height: 2px; background-color: #ac40f8; border: none;"> <br>
@@ -117,4 +117,3 @@
     </main>
   </body>
 </html>
-
