--- a/biografia.htm
+++ b/biografia.htm
@@ -6,9 +6,9 @@
     <title>Biografía – 1ª KOMUNION</title>
     <link rel="stylesheet" href="estilos-int.css">
   </head>
-  <body><a href="index.htm" class="logo"><img src="imagenes/texto%20logo1.gif"
-
-        alt="1ª KOMUNION"> </a>
+  <body>
+ <header class="cabecera"> <a href="index.htm" class="logo"> <img src="imagenes/texto%20logo1.gif"
+          alt="1ª KOMUNION"> </a> </header>
     <nav class="nav-principal">
       <ul>
         <li><a href="index.htm">Inicio</a></li>
