--- a/videos.htm
+++ b/videos.htm
@@ -43,9 +43,8 @@
   </style>
   </head>
   <body>
-    <header class="cabecera"> <a href="index.htm" class="logo"> <img src="imagenes/texto%20logo1.gif"
+    <header class="cabecera"> <a href="index.htm" class="logo"> <img src="imagenes/texto%20logo1.gif"
           alt="1ª KOMUNION"> </a> </header>
-
     <nav class="nav-principal">
       <ul>
         <li><a href="index.htm">Inicio</a></li>
@@ -63,29 +62,32 @@
         <div class="video-single">
           <h3 class="video-title">Llum d'estiu - 1989</h3>
           <iframe src="https://www.youtube.com/embed/5hAwmdKv508" allowfullscreen=""></iframe>
-          <a class="link-youtube" href="https://youtu.be/5hAwmdKv508" target="_blank"
+          <a class="link-youtube" href="https://youtu.be/5hAwmdKv508" target="_blank"
             rel="noopener">Ver en YouTube →</a></div>
-        <div class="video-single"><a class="link-youtube" href="https://youtu.be/5hAwmdKv508"
+        <div class="video-single"><a class="link-youtube" href="https://youtu.be/5hAwmdKv508"
             target="_blank" rel="noopener"></a><br>
           <hr style="height: 2px; background-color: #ac40f8; border: none;"> <br>
         </div>
         <!-- VÍDEO 5 -->
         <div class="video-single">
           <h3 class="video-title">Quería el mundo cambiar </h3>
-          <p><span style="color: red;">(Homenaje a J. Morcillo)</span></p>
+          <p>(Homenaje a J. Morcillo)</p>
           <p><span style="color: red;"><br>
             </span></p>
           <iframe src="https://www.youtube.com/embed/koA2vemFoMA" allowfullscreen=""></iframe>
-          <a class="link-youtube" href="https://youtu.be/koA2vemFoMA" target="_blank"
-            rel="noopener">Ver en YouTube →</a>
+          <a class="link-youtube" href="https://youtu.be/koA2vemFoMA" target="_blank"
+            rel="noopener">Ver en YouTube →</a></div>
+        <div class="video-single"><a class="link-youtube" href="https://youtu.be/koA2vemFoMA"
+            target="_blank" rel="noopener"><br>
+          </a>
           <hr style="height: 2px; background-color: #ac40f8; border: none;"> </div>
         <!-- VÍDEO 2 -->
         <div class="video-single">
           <h3 class="video-title">Bestialc 2008 (Completo)</h3>
-          <iframe src="https://www.youtube.com/embed/https://youtu.be/S21teiZJZWA"
-            allowfullscreen=""></iframe> <a class="link-youtube" href="https://youtu.be/S21teiZJZWA"
+          <iframe src="https://www.youtube.com/embed/https://youtu.be/S21teiZJZWA"
+            allowfullscreen=""></iframe> <a class="link-youtube" href="https://youtu.be/S21teiZJZWA"
             target="_blank" rel="noopener">Ver en YouTube →</a></div>
-        <div class="video-single"><a class="link-youtube" href="https://youtu.be/S21teiZJZWA"
+        <div class="video-single"><a class="link-youtube" href="https://youtu.be/S21teiZJZWA"
             target="_blank" rel="noopener"><br>
           </a><br>
           <hr style="height: 2px; background-color: #ac40f8; border: none;"> <br>
@@ -93,10 +95,10 @@
         <!-- VÍDEO 3 -->
         <div class="video-single">
           <h3 class="video-title">II Vive Rock 2011 (Completo)</h3>
-          <iframe src="https://www.youtube.com/embed/https://youtu.be/xU8h26nwdcw"
-            allowfullscreen=""></iframe> <a class="link-youtube" href="https://youtu.be/xU8h26nwdcw"
+          <iframe src="https://www.youtube.com/embed/https://youtu.be/xU8h26nwdcw"
+            allowfullscreen=""></iframe> <a class="link-youtube" href="https://youtu.be/xU8h26nwdcw"
             target="_blank" rel="noopener">Ver en YouTube →</a></div>
-        <div class="video-single"><a class="link-youtube" href="https://youtu.be/xU8h26nwdcw"
+        <div class="video-single"><a class="link-youtube" href="https://youtu.be/xU8h26nwdcw"
             target="_blank" rel="noopener"><br>
           </a><br>
           <hr style="height: 2px; background-color: #ac40f8; border: none;"> <br>
@@ -104,10 +106,10 @@
         <!-- VÍDEO 4 -->
         <div class="video-single">
           <h3 class="video-title">Bestialc 2013 (Completo)</h3>
-          <iframe src="https://www.youtube.com/embed/https://youtu.be/_3S-OQ9hf8w"
-            allowfullscreen=""></iframe> <a class="link-youtube" href="https://youtu.be/_3S-OQ9hf8w"
+          <iframe src="https://www.youtube.com/embed/https://youtu.be/_3S-OQ9hf8w"
+            allowfullscreen=""></iframe> <a class="link-youtube" href="https://youtu.be/_3S-OQ9hf8w"
             target="_blank" rel="noopener">Ver en YouTube →</a></div>
-        <div class="video-single"><a class="link-youtube" href="https://youtu.be/_3S-OQ9hf8w"
+        <div class="video-single"><a class="link-youtube" href="https://youtu.be/_3S-OQ9hf8w"
             target="_blank" rel="noopener"><br>
           </a><br>
           <hr style="height: 2px; background-color: #ac40f8; border: none;"> <br>
