--- a/videos.htm
+++ b/videos.htm
@@ -84,9 +84,10 @@
         <!-- VÍDEO 2 -->
         <div class="video-single">
           <h3 class="video-title">Bestialc 2008 (Completo)</h3>
-          <iframe src="https://www.youtube.com/embed/https://youtu.be/S21teiZJZWA"
-            allowfullscreen=""></iframe> <a class="link-youtube" href="https://youtu.be/S21teiZJZWA"
-            target="_blank" rel="noopener">Ver en YouTube →</a></div>
+          <p><br>
+          </p>
+          <a class="link-youtube" href="https://youtu.be/S21teiZJZWA" target="_blank"
+            rel="noopener">Ver en YouTube →</a></div>
         <div class="video-single"><a class="link-youtube" href="https://youtu.be/S21teiZJZWA"
             target="_blank" rel="noopener"><br>
           </a><br>
@@ -95,9 +96,10 @@
         <!-- VÍDEO 3 -->
         <div class="video-single">
           <h3 class="video-title">II Vive Rock 2011 (Completo)</h3>
-          <iframe src="https://www.youtube.com/embed/https://youtu.be/xU8h26nwdcw"
-            allowfullscreen=""></iframe> <a class="link-youtube" href="https://youtu.be/xU8h26nwdcw"
-            target="_blank" rel="noopener">Ver en YouTube →</a></div>
+          <p><br>
+          </p>
+          <a class="link-youtube" href="https://youtu.be/xU8h26nwdcw" target="_blank"
+            rel="noopener">Ver en YouTube →</a></div>
         <div class="video-single"><a class="link-youtube" href="https://youtu.be/xU8h26nwdcw"
             target="_blank" rel="noopener"><br>
           </a><br>
@@ -106,9 +108,10 @@
         <!-- VÍDEO 4 -->
         <div class="video-single">
           <h3 class="video-title">Bestialc 2013 (Completo)</h3>
-          <iframe src="https://www.youtube.com/embed/https://youtu.be/_3S-OQ9hf8w"
-            allowfullscreen=""></iframe> <a class="link-youtube" href="https://youtu.be/_3S-OQ9hf8w"
-            target="_blank" rel="noopener">Ver en YouTube →</a></div>
+          <p><br>
+          </p>
+          <a class="link-youtube" href="https://youtu.be/_3S-OQ9hf8w" target="_blank"
+            rel="noopener">Ver en YouTube →</a></div>
         <div class="video-single"><a class="link-youtube" href="https://youtu.be/_3S-OQ9hf8w"
             target="_blank" rel="noopener"><br>
           </a><br>
