--- a/biografia.htm
+++ b/biografia.htm
@@ -78,7 +78,7 @@
         <br>
         &nbsp;&nbsp;&nbsp; Por cierto, prolíficos y fructuosos años que “dieron
         a luz” todos aquellos conciertos (unos 84 más o menos), grabaciones y
-        sesiones de guasa inolvidables tanto para sus miembros como para sus
+        sesiones de guasa inolvidables, tanto para sus miembros como para sus
         seguidores.<a href="imagenes/foto%20oficial%20[1024x768].jpg" target="_blank"><img
 
             src="imagenes/foto%20oficial%20[320x200].gif" alt="Foto oficial" height="240"
@@ -87,17 +87,16 @@
         <p class="center"><br>
         </p>
         Peeeerooooo... pasaron los años, y tras 16 años sin tocar, decidimos
-        resucitar con motivo del 20º aniversario de la formación del grupo.<br>
+        "resucitar" con motivo del 20º aniversario de la formación del grupo.<br>
         &nbsp;&nbsp;&nbsp; Para conmemorar dicho hito, reaparecimos&nbsp; en el
         XIII Bestialc de L'Alcora, el 30 de agosto de 2008. <br>
         &nbsp;&nbsp;&nbsp; Había llovido mucho desde la última vez que habíamos
-        tocado, así que, con unos pocos ensayos y en plan kamikaze, pensamos que
+        tocado, así que, con unos pocos ensayos y en plan kamikaze, nos echamos p'alante, y pensamos que
         para la ocasión debíamos hacer algo que quedase ya plasmado para la
-        posteridad, "Resurrekción" fue el título de esa grabación en directo.
-        Formato DVD por si alguien tiene reproductor.<br>
+        posteridad. "Resurrekción" fue el título de esa grabación en directo, en formato DVD por si alguien todavía tiene reproductor.<br>
         &nbsp;&nbsp;&nbsp; Gracias a la colaboración de Lalo Cotanda (grabación
         de Video y Montaje) y Juan Carlos Tomás Castillo "Juanki" (Grabación de
-        audio). Y sobre todo al público, que una vez más vino a vernos,
+        audio)... Y sobre todo al público, que una vez más vino a vernos,
         brindándonos la ocasión de vivir una noche inolvidable con su presencia.<br>
         <br>
         &nbsp;&nbsp;&nbsp; Y de esta forma,&nbsp; editamos un DVD con las
@@ -120,7 +119,7 @@
         Madri" Gallardo, y a la batería su hijo Ferrán Gallardo.<br>
         <br>
         &nbsp;&nbsp;&nbsp; Poco después, en 2022, la voz y el alma de nuestro
-        sonido, Antonio "Bici", nos dejó prematuramente. Todavía hoy en día es
+        sonido, Antonio "Bici", nos dejó prematuramente. Todavía hoy en día, nos es
         difícil de imaginar que no está entre nosotros. <br>
         <br>
         &nbsp;&nbsp;&nbsp; Ese mismo año, en el 13º Festival Ultrasons,
