--- a/discografia.htm
+++ b/discografia.htm
@@ -13,7 +13,7 @@
     <!-- Menú horizontal entre líneas moradas -->
     <nav class="nav-principal">
       <ul>
- <li><a href="index.htm">Inicio</a></li>
+        <li><a href="index.htm">Inicio</a></li>
         <li><a href="biografia.htm">Biografía</a></li>
         <li><a href="discografia.htm" class="active">Discografía</a></li>
         <li><a href="imagenes.htm">Imágenes</a></li>
@@ -172,9 +172,9 @@
               español</span></li>
         </ul>
       </section>
-       <hr style="height: 2px; background-color: #ac40f8; border: none;"> <br>
+      <hr style="height: 2px; background-color: #ac40f8; border: none;"> <br>
       <section class="disco">
-        <h2>1ª Komunión (LP)</h2>
+        <h2>1ª&nbsp;Komunión (LP)</h2>
         <a target="_blank" href="imagenes/1komunion1.jpg"> <img src="imagenes/_1_komunion1.jpg"
             alt="Portada LP"> </a> <a target="_blank" href="imagenes/1komunion2.jpg">
           <img src="imagenes/_1_komunion2.jpg" alt="Contraportada LP"> </a>
@@ -231,7 +231,7 @@
         <p><br>
         </p>
         <p> </p>
-         <hr style="height: 2px; background-color: #ac40f8; border: none;"> <br>
+        <hr style="height: 2px; background-color: #ac40f8; border: none;"> <br>
         <h2>&nbsp;"Tour 89"</h2>
         <a href="imagenes/maqueta2.jpg" target="_blank"><img src="imagenes/_maqueta2.jpg"
             alt="caratula maqueta" title="maqueta" style="width: 181px; height: 115px;"></a><br>
@@ -256,7 +256,8 @@
         <br>
         Temas incluidos:<br>
         <br>
-        &nbsp;&nbsp;<span style="color: yellow;">&nbsp; Primera Komunión<br>
+        &nbsp;&nbsp;<span style="color: yellow;">&nbsp; <a href="%20%20%20%20%20%20%3Cdiv%20class=%22indice-letras%22%3E%20%3Ca%20href=%22#Primera_Komunion%22%3EPrimera">Primera
+            Komunión</a><br>
           &nbsp;&nbsp;&nbsp; Irán - Irak<br>
           &nbsp;&nbsp;&nbsp; Soldadito español<br>
           &nbsp;&nbsp;&nbsp; Si fuera Dios<br>
@@ -273,7 +274,7 @@
         <ul>
         </ul>
       </section>
-       <hr style="height: 2px; background-color: #ac40f8; border: none;"> <br>
+      <hr style="height: 2px; background-color: #ac40f8; border: none;"> <br>
       <section class="disco">
         <h2>&nbsp;"Circuito Rock"</h2>
         <a href="imagenes/singleivaj1.jpg" target="_blank"><img src="imagenes/_single_ivaj1.jpg"
@@ -291,7 +292,7 @@
         &nbsp;&nbsp;&nbsp; <span style="color: yellow;">Barrios bajos<br>
           <br>
           &nbsp;&nbsp;&nbsp; Apocalipsis II</span></section>
-       <hr style="height: 2px; background-color: #ac40f8; border: none;"> <br>
+      <hr style="height: 2px; background-color: #ac40f8; border: none;"> <br>
       <section class="disco">
         <h2>&nbsp;El Gallinero Eléctrico Uno</h2>
         <a href="imagenes/gallinero1.jpg" target="_blank"><img src="imagenes/_gallinero1.jpg"></a><a
@@ -321,16 +322,17 @@
         Se grabó entre finales de octubre y principios de noviembre en Estudios
         Waves, de Almazora. Editado por Matraka Diskak (EUKZ 003 Dep. legal:
         m-42767-91). Como anécdota, comentar que compratimos estudio con
-        Eskorbuto en la grabación de su LP "Demasiados enemigos". Y para los más frikis, decir que los dos temas están grabados con la "famosa" Gibson Les Paul negra del guitarrista de Eskorbuto, Iosu Expósito.   &#128513;
-
-<br>
+        Eskorbuto en la grabación de su LP "Demasiados enemigos". Y para los más
+        frikis, decir que los dos temas están grabados con la "famosa" Gibson
+        Les Paul negra del guitarrista de Eskorbuto, Iosu Expósito. 😁
+        <br>
         <br>
         Temas incluidos:<br>
         <br>
         &nbsp;&nbsp;&nbsp;<span style="color: yellow;"> Malditos concursos<br>
           <br>
           La fiesta</span></section>
-       <hr style="height: 2px; background-color: #ac40f8; border: none;"> <br>
+      <hr style="height: 2px; background-color: #ac40f8; border: none;"> <br>
       <section class="disco">
         <h2>Con M de Morcillo (Tributo)</h2>
         <a href="imagenes/Morcillo1[640x480].jpg" target="_blank"><img src="imagenes/Morcillo1[150]%20[].jpg"
@@ -349,7 +351,7 @@
         <br>
         <span style="color: yellow;">&nbsp;&nbsp;&nbsp; Quería el mundo cambiar
           (J. Morcillo).</span></section>
-       <hr style="height: 2px; background-color: #ac40f8; border: none;"> <br>
+      <hr style="height: 2px; background-color: #ac40f8; border: none;"> <br>
       <section class="disco">
         <h2>&nbsp;Rocke'n'Babia</h2>
         <a href="imagenes/babia2.jpg" target="_blank"><img src="imagenes/_babia2.jpg"
@@ -395,7 +397,7 @@
         Tema incluido:<br>
         <br>
         <span style="color: yellow;">&nbsp;&nbsp;&nbsp; Barrios bajos</span></section>
-       <hr style="height: 2px; background-color: #ac40f8; border: none;"> <br>
+      <hr style="height: 2px; background-color: #ac40f8; border: none;"> <br>
       <section class="disco">
         <h2>La Figa Palera</h2>
         <a href="imagenes/la_figa_palera.jpg" target="_blank"><img src="imagenes/_la_figa_palera.jpg"
@@ -404,14 +406,14 @@
         día 13 de Mayo de 1989. El promotor del evento fué Julio Matraka.<br>
         <br>
         En ese concierto, actuaron La Polla Records, Parabellum, Juanito Pikete
-        y los Mataesquiroles, El Último ke zierre y 1ª Komunión.<br>
+        y los Mataesquiroles, El Último ke zierre y 1ª&nbsp;Komunión.<br>
         <br>
         Destacar que para nosotros fué un flash poder tocar con La Polla Records
         en su época de mayor auge. Toda una experiencia.<br>
         <br>
         La cinta la editó Discos Medicinales (ESP-101).<br>
         <br>
-        De 1ª Komunión, se incluyeron los temas:<br>
+        De 1ª&nbsp;Komunión, se incluyeron los temas:<br>
         <br>
         &nbsp;&nbsp;&nbsp; <span style="color: yellow;">Plátanos<br>
           <br>
@@ -428,11 +430,11 @@
         libertarios.<br>
         <br>
         Participaron en la grabación: Nocivo, Os verjalhudos, La chusma,
-        Parabellum y 1ª Komunión.<br>
+        Parabellum y 1ª&nbsp;Komunión.<br>
         <br>
         La cinta fué editada por Fobia (f001 - Dep. legal: M-8524-1991)<br>
         <br>
-        Temas de 1ª Komunión incluídos:<br>
+        Temas de 1ª&nbsp;Komunión incluídos:<br>
         <br>
         &nbsp;&nbsp;&nbsp;<span style="color: yellow;"> Ajedrez mortal<br>
           <br>
