--- a/letras.htm
+++ b/letras.htm
@@ -50,7 +50,7 @@
       <!-- ====== CANCIONES ====== -->
       <section class="cancion">
         <h2 id="Primera_Komunion">Primera Komunión</h2>
-        <p class="credito">Letra y música 1ª K. (De la maqueta “Tour ’89”)</p>
+        <p class="credito">Letra y música 1ª&nbsp;K. (De la maqueta “Tour ’89”)</p>
         <!-- REPRODUCTOR --> <br>
         <audio controls="controls" preload="none"> <source src="audios/01%20-%201a%20Komunion.mp3"
             type="audio/mpeg"> Tu navegador no soporta audio HTML5. </audio><br>
@@ -71,7 +71,7 @@
       </section>
       <section class="cancion">
         <h2 id="Soldadito_Espanol">Soldadito Español</h2>
-        <p class="credito">Letra: A. Díaz. Música: 1ª K. (De la maqueta “Tour ’89”)</p>
+        <p class="credito">Letra: A. Díaz. Música: 1ª&nbsp;K. (De la maqueta “Tour ’89”)</p>
         <!-- REPRODUCTOR --> <br>
         <audio controls="controls" preload="none" src="audios/03%20-%20Soldadito%20espa%C3%B1ol.mp3">
           <source src="audios/01%20-%201a%20Komunion.mp3" type="audio/mpeg"> Tu
@@ -159,7 +159,7 @@
       </section>
       <section class="cancion">
         <h2 id="Tu_trozo_de_libertad">Tu trozo de libertad</h2>
-        <p class="credito">J. Gallardo. Música: 1ª K. (Del LP “1ª Komunión”)</p>
+        <p class="credito">J. Gallardo. Música: 1ª&nbsp;K. (Del LP “1ª&nbsp;Komunión”)</p>
         <!-- REPRODUCTOR --> <br>
         <audio controls="controls" preload="none" src="audios/01%20-%20Tu%20trozo%20de%20libertad.mp3">
           <source src="audios/01%20-%201a%20Komunion.mp3" type="audio/mpeg"> Tu
@@ -170,7 +170,7 @@
       </section>
       <section class="cancion">
         <h2 id="Inseguridad_Social">Inseguridad Social</h2>
-        <p class="credito">Letra: J. Gallardo. Música: L. Solaz. (Del LP “1ª Komunión”)</p>
+        <p class="credito">Letra: J. Gallardo. Música: L. Solaz. (Del LP “1ª&nbsp;Komunión”)</p>
         <!-- REPRODUCTOR --> <br>
         <audio controls="controls" preload="none" src="audios/02%20-%20Inseguridad%20social.mp3">
           <source src="audios/01%20-%201a%20Komunion.mp3" type="audio/mpeg"> Tu
@@ -181,7 +181,7 @@
       </section>
       <section class="cancion">
         <h2 id="Hambre">Hambre</h2>
-        <p class="credito">Letra: A. Díaz. Música: P. Tomás, L. Solaz. (Del LP “1ª Komunión”)</p>
+        <p class="credito">Letra: A. Díaz. Música: P. Tomás, L. Solaz. (Del LP “1ª&nbsp;Komunión”)</p>
         <!-- REPRODUCTOR --> <br>
         <audio controls="controls" preload="none" src="audios/03%20-%20Hambre.mp3">
           <source src="audios/01%20-%201a%20Komunion.mp3" type="audio/mpeg"> Tu
@@ -192,7 +192,7 @@
       </section>
       <section class="cancion">
         <h2 id="Ser_alcalde">Ser alcalde...</h2>
-        <p class="credito">A. Díaz. Música: P. Tomás. (Del LP “1ª Komunión”)</p>
+        <p class="credito">A. Díaz. Música: P. Tomás. (Del LP “1ª&nbsp;Komunión”)</p>
         <!-- REPRODUCTOR --> <br>
         <audio controls="controls" preload="none" src="audios/04%20-%20Ser%20alcalde....mp3">
           <source src="audios/01%20-%201a%20Komunion.mp3" type="audio/mpeg"> Tu
@@ -203,7 +203,7 @@
       </section>
       <section class="cancion">
         <h2 id="Consumir">Consumir</h2>
-        <p class="credito">Letra: J. Gallardo. Música: P. Tomás. (Del LP “1ª Komunión”)</p>
+        <p class="credito">Letra: J. Gallardo. Música: P. Tomás. (Del LP “1ª&nbsp;Komunión”)</p>
         <!-- REPRODUCTOR --> <br>
         <audio controls="controls" preload="none" src="audios/05%20-%20Consumir.mp3">
           <source src="audios/01%20-%201a%20Komunion.mp3" type="audio/mpeg"> Tu
@@ -214,7 +214,7 @@
       </section>
       <section class="cancion">
         <h2 id="Que_se_voten_ellos">Que se voten ellos</h2>
-        <p class="credito">Letra: J. Gallardo. Música: 1ª K. (Del LP “1ª Komunión”)</p>
+        <p class="credito">Letra: J. Gallardo. Música:  1ª&nbsp;K. (Del LP “1ª&nbsp;Komunión”)</p>
         <!-- REPRODUCTOR --> <br>
         <audio controls="controls" preload="none" src="audios/06%20-%20Que%20se%20voten%20ellos.mp3">
           <source src="audios/01%20-%201a%20Komunion.mp3" type="audio/mpeg"> Tu
@@ -225,7 +225,7 @@
       </section>
       <section class="cancion">
         <h2 id="Hombre_Salvaje">Hombre Salvaje</h2>
-        <p class="credito">Letra: J. Gallardo. Música: P. Tomás. (Del LP “1ª Komunión”)</p>
+        <p class="credito">Letra: J. Gallardo. Música: P. Tomás. (Del LP “1ª&nbsp;Komunión”)</p>
         <!-- REPRODUCTOR --> <br>
         <audio controls="controls" preload="none" src="audios/07%20-%20Hombre%20salvaje.mp3">
           <source src="audios/01%20-%201a%20Komunion.mp3" type="audio/mpeg"> Tu
@@ -236,7 +236,7 @@
       </section>
       <section class="cancion">
         <h2 id="El_mangui">El mangui</h2>
-        <p class="credito">Letra: J. Gallardo. Música: P. Tomás. (Del LP “1ª Komunión”)</p>
+        <p class="credito">Letra: J. Gallardo. Música: P. Tomás. (Del LP “1ª&nbsp;Komunión”)</p>
         <!-- REPRODUCTOR --> <br>
         <audio controls="controls" preload="none" src="audios/08%20-%20El%20mangui.mp3">
           <source src="audios/01%20-%201a%20Komunion.mp3" type="audio/mpeg"> Tu
@@ -247,7 +247,7 @@
       </section>
       <section class="cancion">
         <h2 id="No_puede_ser">No puede ser</h2>
-        <p class="credito">Letra y música: P. Tomás. (Del LP “1ª Komunión”)</p>
+        <p class="credito">Letra y música: P. Tomás. (Del LP “1ª&nbsp;Komunión”)</p>
         <!-- REPRODUCTOR --> <br>
         <audio controls="controls" preload="none" src="audios/09%20-%20No%20puede%20ser.mp3">
           <source src="audios/01%20-%201a%20Komunion.mp3" type="audio/mpeg"> Tu
@@ -258,7 +258,7 @@
       </section>
       <section class="cancion">
         <h2 id="Francisquillo">Francisquillo</h2>
-        <p class="credito">Letra: J. Gallardo. Música: A. Díaz, P. Tomás. (Del LP “1ª Komunión”)</p>
+        <p class="credito">Letra: J. Gallardo. Música: A. Díaz, P. Tomás. (Del LP “1ª&nbsp;Komunión”)</p>
         <!-- REPRODUCTOR --> <br>
         <audio controls="controls" preload="none" src="audios/10%20-%20Franciskillo.mp3">
           <source src="audios/01%20-%201a%20Komunion.mp3" type="audio/mpeg"> Tu
@@ -269,7 +269,7 @@
       </section>
       <section class="cancion">
         <h2 id="Goodway_Paco">Goodway Paco</h2>
-        <p class="credito">Letra: J. Gallardo. Música: L. Solaz. (Del LP “1ª Komunión”)</p>
+        <p class="credito">Letra: J. Gallardo. Música: L. Solaz. (Del LP “1ª&nbsp;Komunión”)</p>
         <!-- REPRODUCTOR --> <br>
         <audio controls="controls" preload="none" src="audios/11%20-%20Goodway%20Paco.mp3">
           <source src="audios/01%20-%201a%20Komunion.mp3" type="audio/mpeg"> Tu
@@ -280,7 +280,7 @@
       </section>
       <section class="cancion">
         <h2 id="Nada_sabras">Nada sabrás</h2>
-        <p class="credito">Letra: J. Gallardo. Música: 1ª K. (Del EP “El gallinero eléctrico”)</p>
+        <p class="credito">Letra: J. Gallardo. Música: 1ª&nbsp;K. (Del EP “El gallinero eléctrico”)</p>
         <!-- REPRODUCTOR --> <br>
         <audio controls="controls" preload="none" src="audios/12%20-%20Nada%20sabr%C3%A1s.mp3">
           <source src="audios/01%20-%201a%20Komunion.mp3" type="audio/mpeg"> Tu
@@ -291,7 +291,7 @@
       </section>
       <section class="cancion">
         <h2 id="Ajedrez_mortal">Ajedrez mortal</h2>
-        <p class="credito">Letra: A. Díaz. Música: 1ª K. (Del CD "Konfirmación")</p>
+        <p class="credito">Letra: A. Díaz. Música: 1ª&nbsp;K. (Del CD "Konfirmación")</p>
         <!-- REPRODUCTOR --> <br>
         <audio controls="controls" preload="none" src="audios/01%20-%20Ajedrez%20mortal.mp3">
           <source src="audios/01%20-%201a%20Komunion.mp3" type="audio/mpeg"> Tu
@@ -315,7 +315,7 @@
         <p class="volver"><a href="#inicio"><br>
           </a></p>
         <h2 id="Apestados_Unidos">Apestados Unidos</h2>
-        <p class="credito">Letra: J. Gallardo. Música: 1ª K. (Del CD "Konfirmación")</p>
+        <p class="credito">Letra: J. Gallardo. Música: 1ª&nbsp;K. (Del CD "Konfirmación")</p>
         <br>
         <section class="cancion"><audio controls="controls" preload="none" src="audios/03%20-%20Apestados%20Unidos.mp3">
             Tu navegador no soporta audio HTML5. </audio><br>
@@ -371,7 +371,7 @@
       </section>
       <section class="cancion">
         <h2 id="Principe_Azul">Príncipe Azul</h2>
-        <p class="credito">Letra: J.Gallardo. Música: 1ª K.&nbsp; (Del CD "Konfirmación")</p>
+        <p class="credito">Letra: J.Gallardo. Música: 1ª&nbsp;K.&nbsp; (Del CD "Konfirmación")</p>
         <!-- REPRODUCTOR --> <br>
         <audio controls="controls" preload="none" src="audios/08%20-%20Principe%20Azul.mp3">
           <source src="audios/01%20-%201a%20Komunion.mp3" type="audio/mpeg"> Tu
@@ -393,7 +393,7 @@
       </section>
       <section class="cancion">
         <h2 id="El_Racismo">El Racismo</h2>
-        <p class="credito">Letra: A. Díaz. Música: 1ª K. (Del CD "Konfirmación")</p>
+        <p class="credito">Letra: A. Díaz. Música: 1ª&nbsp;K. (Del CD "Konfirmación")</p>
         <!-- REPRODUCTOR --> <br>
         <audio controls="controls" preload="none" src="audios/10%20-%20El%20racismo.mp3">
           <source src="audios/01%20-%201a%20Komunion.mp3" type="audio/mpeg"> Tu
@@ -415,7 +415,7 @@
       </section>
       <section class="cancion">
         <h2 id="Apocalipsis_I">Apocalipsis I</h2>
-        <p class="credito">Letra J. Gallardo. Música: 1ª K.&nbsp; (Del CD "Konfirmación")</p>
+        <p class="credito">Letra J. Gallardo. Música: 1ª&nbsp;K.&nbsp; (Del CD "Konfirmación")</p>
         <!-- REPRODUCTOR --> <br>
         <audio controls="controls" preload="none" src="audios/12%20-%20Apocalipsis%20I.mp3">
           <source src="audios/01%20-%201a%20Komunion.mp3" type="audio/mpeg"> Tu
@@ -448,7 +448,7 @@
       </section>
       <section class="cancion">
         <h2 id="Malditos_concursos">Malditos concursos</h2>
-        <p class="credito">Letra: J. Gallardo. Música: 1ª K. ( Del LP “Matraka Monsters”)</p>
+        <p class="credito">Letra: J. Gallardo. Música: 1ª&nbsp;K. ( Del LP “Matraka Monsters”)</p>
         <!-- REPRODUCTOR --> <br>
         <audio controls="controls" preload="none" src="audios/15%20-%20Malditos%20concursos.mp3">
           <source src="audios/01%20-%201a%20Komunion.mp3" type="audio/mpeg"> Tu
@@ -459,7 +459,7 @@
       </section>
       <section class="cancion">
         <h2 id="La_fiesta">La fiesta</h2>
-        <p class="credito">Letra: J. Gallardo. Música: 1ª K. ( Del LP “Matraka Monsters”)</p>
+        <p class="credito">Letra: J. Gallardo. Música: 1ª&nbsp;K. ( Del LP “Matraka Monsters”)</p>
         <!-- REPRODUCTOR --> <br>
         <audio controls="controls" preload="none" src="audios/16%20-%20La%20fiesta.mp3">
           <source src="audios/01%20-%201a%20Komunion.mp3" type="audio/mpeg"> Tu
@@ -470,7 +470,7 @@
       </section>
       <section class="cancion">
         <h2 id="Huelga_de_hambre">Huelga de hambre. (Directo)</h2>
-        <p class="credito">Letra y música: 1ª K.( Del LP en directo “Rocke’n’Babia”)</p>
+        <p class="credito">Letra y música: 1ª&nbsp;K.( Del LP en directo “Rocke’n’Babia”)</p>
         <!-- REPRODUCTOR --> <br>
         <audio controls="controls" preload="none" src="audios/17%20-%20Huelga%20de%20hambre%20%28Live%29.mp3">
           <source src="audios/01%20-%201a%20Komunion.mp3" type="audio/mpeg"> Tu
